# mycompiler

./: .gitignore  CMakeLists.txt  sldriver.hpp  slgrammar.y  sllex.l
.github/workflows/: cmake-single-platform.yml
src/: codegen.cpp  codegen.hpp  driver.cpp  driver.hpp  grammar.y  inode.hpp  lexer.l  main.cpp  node.cpp  node.hpp  sldriver.hpp  slgrammar.y  sllex.l  symtab.cpp  symtab.hpp
src/godegen/: ast.hpp  codegen.hpp  inode.hpp  node.cpp
src/grammar/: CMakeLists.txt  driver.cpp  slgrammar.y  sllex.l
std/: lib.cpp
test/: fib.sl  main.sl  main2.sl  main3.sl  main4.sl
